# yakrobot-descriptor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: adr-0001-model-first-contract.md
examples/: tumbller.json
scripts/: generate_schema.py
src/yakrobot_descriptor/: __init__.py  constants.py  descriptor.schema.json  models.py  schema.py
tests/: test_contract.py
